--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
   <script src="js/main.js"></script>
 
 </head>
+
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="80">
 
   <!-- Navbar -->
   <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand fw-bold text-primary" href="#">Divorcios Online</a>
+      <a class="navbar-brand fw-bold text-primary" href="http://www.w3.org/2000/svg">Divorcios Online</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -170,30 +171,20 @@
 
 <!-- Sección Solicita tu Consulta Gratuita -->
 <section id="consulta" class="py-5 bg-light">
-  <div class="container">
+  <div class="container text-center mb-4">
     <div class="row align-items-center">
-      <!-- Información lateral -->
-      <div class="col-md-6 mb-4 mb-md-0">
+      <div class="col">
         <h2 class="fw-bold mb-3">Solicita tu Consulta Gratuita</h2>
-        <p>Uno de nuestros especialistas te contactará para evaluar tu caso y orientarte paso a paso.</p>
-        <ul class="list-unstyled">
-          <li class="mb-2">
-            <i class="bi bi-check-circle-fill text-primary me-2"></i>
-            Asesoría inicial sin costo
-          </li>
-          <li class="mb-2">
-            <i class="bi bi-check-circle-fill text-primary me-2"></i>
-            Respuesta en menos de 24 horas
-          </li>
-          <li class="mb-2">
-            <i class="bi bi-check-circle-fill text-primary me-2"></i>
-            Proceso 100% confidencial
-          </li>
-        </ul>
+        <h5 style="color: #47556E;">Uno de nuestros especialistas te contactará para evaluar tu caso y orientarte paso a paso.</h5>
       </div>
+    </div>
+  </div>
 
-      <!-- Formulario -->
-      <div class="col-md-6">
+  <div class="container">
+    <div class="row">
+      
+      <!-- 📝 Formulario -->
+      <div class="col-md-6 mb-4">
         <form id="consultaForm" novalidate>
           <div class="mb-3">
             <label for="nombre" class="form-label">Nombre completo</label>
@@ -230,10 +221,54 @@
             <textarea class="form-control" id="mensaje" rows="4" required></textarea>
             <div class="invalid-feedback">Por favor describe tu situación.</div>
           </div>
-
           <button type="submit" class="btn btn-primary">Enviar Consulta</button>
         </form>
+      </div>
 
+      <!-- ℹ️ Información lateral -->
+      <div class="col-md-6">
+        <h3 class="fw-bold mb-3">Información de contacto</h3>
+        <ul class="list-unstyled">
+          <li class="mb-2">
+            <i class="bi bi-telephone text-primary me-2"></i>
+            <a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda">+1 (809) 000-0000</a>
+          </li>
+          <li class="mb-2">
+            <i class="bi bi-envelope text-primary me-2"></i>
+            <a href="mailto:r3a1ylegends@gmail.com">tunombre@dominio.com</a>
+          </li>
+          <li class="mb-2">
+            <i class="bi bi-geo-alt-fill text-primary me-2"></i>
+            Consulta 100% online
+          </li>
+          <li class="mb-2">
+            <a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda" class="btn btn-outline-success">
+              <i class="bi bi-whatsapp me-1"></i> Escríbeme
+            </a>
+          </li>
+          <li class="mb-2">
+            <a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda" class="btn btn-outline-primary">
+              <i class="bi bi-instagram me-1"></i> Conoceme
+            </a>
+          </li>
+        </ul>
+
+        <br>
+        <h5 class="fw-bold mb-3">¿Por qué elegir Divorcios Online?</h5>
+        <ul class="list-unstyled">
+          <li class="mb-2">
+            <i class="bi bi-check-circle-fill text-success me-2"></i>
+            Asesoría inicial sin costo
+          </li>
+          <li class="mb-2">
+            <i class="bi bi-check-circle-fill text-success me-2"></i>
+            Respuesta en menos de 24 horas
+          </li>
+          <li class="mb-2">
+            <i class="bi bi-check-circle-fill text-success me-2"></i>
+            Proceso 100% confidencial
+          </li>
+        </ul>
       </div>
     </div>
   </div>
@@ -280,3 +315,24 @@
     </div>
   </div>
 </footer>
+
+<style>
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+.whatsapp-float:hover {
+  transform: scale(1.1);
+}
+</style>
+
+<a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda" target="_blank" class="whatsapp-float">
+  <img src="https://media.tenor.com/ipP4Q7xYznwAAAAj/araslot-whatsapp.gif" alt="Whatsapp" width="50" height="50">
+</a>
+
+</body>
+</html>
