--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Navbar -->
   <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container">
-      <a class="navbar-brand fw-bold text-primary" href="http://www.w3.org/2000/svg">Divorcios Online</a>
+      <a class="navbar-brand fw-bold text-primary" href="index.html">Divorcios Online</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,9 +50,6 @@
     </div>
   </nav>
 
-
-
-  <!-- Hero Principal -->
   <!-- Hero Principal -->
   <section id="hero" class="py-5 text-white" style="background-color: #F3F8FD;">
     <div class="container text-center py-5">
@@ -212,10 +209,9 @@
               <label for="tipoDivorcio" class="form-label">Tipo de Divorcio</label>
               <select class="form-select" id="tipoDivorcio" required>
                 <option value="">Selecciona una opción</option>
-                <option value="mutuo">Mutuo Acuerdo</option>
-                <option value="unilateral">Unilateral</option>
-                <option value="internacional">Internacional</option>
-                <option value="express">Express</option>
+                <option value="mutuo">Divorcio de mutuo acuerdo</option>
+                <option value="unilateral">Divorcio por causa determinada</option>
+                <option value="internacional">Divorcio al vapor</option>
               </select>
               <div class="invalid-feedback">Selecciona un tipo de divorcio.</div>
             </div>
