--- a/citas.html
+++ b/citas.html
@@ -7,6 +7,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" rel="stylesheet">
     <style>
+        .hero {
+            background-color: #f1f5ff;
+            padding: 4rem 0;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-weight: 700;
+        }
+
+        .hero span.text-primary {
+            color: #2563EB !important;
+        }
+
+        .badge-custom {
+            background-color: #e0d3f5;
+            color: #6b21a8;
+            font-size: 0.75rem;
+        }
+
         body {
             background-color: #f8f9fa;
         }
@@ -20,22 +40,41 @@
             max-width: 500px;
             margin: auto;
         }
+
+        .hero {
+            background-color: #f1f5ff;
+            padding: 4rem 0;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-weight: 700;
+        }
+
+        .hero span.text-primary {
+            color: #2563EB !important;
+        }
+
+        .badge-custom {
+            background-color: #e0d3f5;
+            color: #6b21a8;
+            font-size: 0.75rem;
+        }
     </style>
 </head>
 
 <body>
-    <!-- Navbar (reutilizado del sitio principal) -->
-    <!-- Aquí insertas tu navbar -->
+
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold text-primary" href="http://www.w3.org/2000/svg">Divorcios Online</a>
+            <a class="navbar-brand fw-bold text-primary" href="index.html">Divorcios Online</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navMenu">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#servicios">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="calculadora.html">Calculadora</a></li>
                     <li class="nav-item"><a class="nav-link" href="citas.html">Citas</a></li>
                     <li class="nav-item"><a class="nav-link" href="testimonios.html">Testimonios</a></li>
@@ -48,10 +87,21 @@
             </div>
         </div>
     </nav>
-    <br>
-    <br>
+
+
+    <section class="hero mt-5 pt-5">
+        <div class="container">
+            <span class="badge badge-custom mb-3">Sistema de Cistas Online</span>
+            <h1>Agenda tu Consulta</h1>
+            <h1><span class="text-primary">Gratuita Ahora</span></h1>
+            <p class="text-muted">Selecciona el día y hora que mejor te convenga para hablar con uno de nuestros <br>
+                abogados especializados en divorcios.</p>
+        </div>
+    </section>
 
     <div class="container py-5">
+
+
         <div class="calendar-card card shadow-sm p-4">
             <div class="step-indicator text-center text-primary">Paso 1 de 4: Selecciona el día</div>
             <h4 class="text-center mb-4">Calendario de Disponibilidad</h4>
@@ -74,14 +124,15 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Divorcios Online</h5>
                     <p>Especialistas en divorcios rápidos, seguros y completamente en línea. Atención personalizada y
-                        asesoría legal confiable.</p>
+                        asesoría
+                        legal confiable.</p>
                 </div>
 
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
-                        <li><a href="#proceso" class="text-white text-decoration-none">Proceso</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
                         <li><a href="faq.html" class="text-white text-decoration-none">Preguntas Frecuentes</a></li>
