--- a/formulario.html
+++ b/formulario.html
@@ -7,6 +7,26 @@
     <title>Formulario de Contacto - Citas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <style>
+        .hero {
+            background-color: #f1f5ff;
+            padding: 4rem 0;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-weight: 700;
+        }
+
+        .hero span.text-primary {
+            color: #2563EB !important;
+        }
+
+        .badge-custom {
+            background-color: #e0d3f5;
+            color: #6b21a8;
+            font-size: 0.75rem;
+        }
+
         .step-indicator {
             font-weight: bold;
             margin-bottom: 20px;
@@ -43,31 +63,44 @@
 <body>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold text-primary" href="index.html">Divorcios Online</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navMenu">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="index.html#servicios">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="calculadora.html">Calculadora</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="citas.html">Citas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="citas.html">Citas</a></li>
                     <li class="nav-item"><a class="nav-link" href="testimonios.html">Testimonios</a></li>
                     <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                     <li class="nav-item">
-                        <a class="btn btn-primary ms-2" href="#consulta">Consulta Gratuita</a>
+                        <a class="btn btn-primary ms-2" href="index.html#consulta">Consulta Gratuita</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <br /><br /><br />
+    <section class="hero mt-5 pt-5">
+        <div class="container">
+            <span class="badge badge-custom mb-3">Sistema de Cistas Online</span>
+            <h1>Agenda tu Consulta</h1>
+            <h1><span class="text-primary">Gratuita Ahora</span></h1>
+            <p class="text-muted">Selecciona el día y hora que mejor te convenga para hablar con uno de nuestros <br>
+                abogados especializados en divorcios.</p>
+        </div>
+    </section>
+
+
 
     <div class="container py-4">
+
+
         <div class="step-indicator">Paso 3 de 4: Confirma tus datos de contacto</div>
 
         <div class="row g-4">
@@ -117,11 +150,9 @@
                         <label for="tipoDivorcio" class="form-label">Tipo de Divorcio (opcional)</label>
                         <select class="form-select" id="tipoDivorcio">
                             <option value="" selected>Selecciona una opción</option>
-                            <option value="Divorcio Express">Divorcio Express</option>
-                            <option value="Mutuo Acuerdo">Mutuo Acuerdo</option>
-                            <option value="Contencioso">Contencioso</option>
-                            <option value="Alimentos">Alimentos</option>
-                            <option value="Otros">Otros</option>
+                            <option value="Divorcio de mutuo acuerdo">Divorcio de mutuo acuerdo</option>
+                            <option value="Divorcio por causa determinada">Divorcio por causa determinada</option>
+                            <option value="Divorcio al vapor">Divorcio al vapor</option>
                         </select>
                     </div>
 
@@ -172,26 +203,28 @@
     </div>
 
     <!-- Footer -->
-    <footer class="footer bg-dark text-white pt-5 pb-3 mt-5">
+    <footer class="footer bg-dark text-white pt-5 pb-3">
         <div class="container">
             <div class="row">
+
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Divorcios Online</h5>
-                    <p>
-                        Especialistas en divorcios rápidos, seguros y completamente en línea.
-                        Atención personalizada y asesoría legal confiable.
-                    </p>
+                    <p>Especialistas en divorcios rápidos, seguros y completamente en línea. Atención personalizada y
+                        asesoría
+                        legal confiable.</p>
                 </div>
+
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
-                        <li><a href="#proceso" class="text-white text-decoration-none">Proceso</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
                         <li><a href="faq.html" class="text-white text-decoration-none">Preguntas Frecuentes</a></li>
                     </ul>
                 </div>
+
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Contáctanos</h5>
                     <p><i class="bi bi-geo-alt-fill me-2"></i> República Dominicana</p>
@@ -203,9 +236,13 @@
                         <a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
+
             </div>
+
             <hr class="bg-secondary" />
-            <div class="text-center small mt-3">&copy; 2025 Divorcios Online. Todos los derechos reservados.</div>
+            <div class="text-center small mt-3">
+                &copy; 2025 Divorcios Online. Todos los derechos reservados.
+            </div>
         </div>
     </footer>
 
