--- a/testimonios.html
+++ b/testimonios.html
@@ -7,6 +7,26 @@
     <title>Testimonios - Casos de Éxito</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <style>
+        .hero {
+            background-color: #f1f5ff;
+            padding: 4rem 0;
+            text-align: center;
+        }
+
+        .hero h1 {
+            font-weight: 700;
+        }
+
+        .hero span.text-primary {
+            color: #2563EB !important;
+        }
+
+        .badge-custom {
+            background-color: #e0d3f5;
+            color: #6b21a8;
+            font-size: 0.75rem;
+        }
+
         .titulo-principal {
             font-size: 2.5rem;
             font-weight: 800;
@@ -54,14 +74,14 @@
     <!-- Aquí se inserta el navbar del sitio -->
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand fw-bold text-primary" href="http://www.w3.org/2000/svg">Divorcios Online</a>
+            <a class="navbar-brand fw-bold text-primary" href="index.html">Divorcios Online</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navMenu">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" href="#servicios">Servicios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#servicios">Servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="calculadora.html">Calculadora</a></li>
                     <li class="nav-item"><a class="nav-link" href="citas.html">Citas</a></li>
                     <li class="nav-item"><a class="nav-link" href="testimonios.html">Testimonios</a></li>
@@ -74,20 +94,21 @@
             </div>
         </div>
     </nav>
+
+    <section class="hero mt-5 pt-5">
+        <div class="container">
+            <span class="badge badge-custom mb-3">Casos de Éxito</span>
+            <h1>Testimonios Reales de</h1>
+            <h1><span class="text-primary">Nuestros Clientes</span></h1>
+            <p class="text-muted">Descubre cómo hemos ayudado a más de 1,000 familias a resolver sus procesos de <br>
+                divorcio de manera rápida, profesional y humana.</p>
+        </div>
+    </section>
     <br>
     <br>
 
     <div class="container py-5">
-        <div class="text-center mb-4">
-            <div class="titulo-principal">Casos de Éxito</div>
-            <div class="titulo-principal">Testimonios Reales de</div>
-            <div class="titulo-principal">Nuestros Clientes</div>
-            <p class="subtitulo">
-                Descubre cómo hemos ayudado a más de 1,000 familias a resolver sus procesos de divorcio de manera
-                rápida,
-                profesional y humana.
-            </p>
-        </div>
+
 
         <!-- Puntos fundamentales -->
         <div class="resumen-puntos">
@@ -164,14 +185,15 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Divorcios Online</h5>
                     <p>Especialistas en divorcios rápidos, seguros y completamente en línea. Atención personalizada y
-                        asesoría legal confiable.</p>
+                        asesoría
+                        legal confiable.</p>
                 </div>
 
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
-                        <li><a href="#proceso" class="text-white text-decoration-none">Proceso</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
                         <li><a href="faq.html" class="text-white text-decoration-none">Preguntas Frecuentes</a></li>
