--- a/formulario.html
+++ b/formulario.html
@@ -101,7 +101,7 @@
     <div class="container py-4">
 
 
-        <div class="step-indicator">Paso 3 de 4: Confirma tus datos de contacto</div>
+        <h3 class="step-indicator">Paso 3 de 4: Confirma tus datos de contacto</h3>
 
         <div class="row g-4">
             <!-- Formulario Izquierda -->
@@ -217,7 +217,8 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros
+                                Servicios</a></li>
                         <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
@@ -249,65 +250,97 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        // Cargar datos previos desde localStorage
-        document.addEventListener("DOMContentLoaded", () => {
-            const fecha = localStorage.getItem("fechaSeleccionada") || "--";
-            const hora = localStorage.getItem("horaSeleccionada") || "--";
-            const tipoConsultaSeleccionado = localStorage.getItem("tipoConsulta") || "--";
+       document.addEventListener("DOMContentLoaded", () => {
+  // Cargar datos previos desde localStorage y mostrar resumen
+  const fecha = localStorage.getItem("fechaSeleccionada") || "--";
+  const hora = localStorage.getItem("horaSeleccionada") || "--";
 
-            document.getElementById("fechaResumen").textContent = "Fecha: " + fecha;
-            document.getElementById("horaResumen").textContent = "Hora: " + hora;
-            document.getElementById("tipoConsultaResumen").textContent = "Tipo de Consulta: " + tipoConsultaSeleccionado;
+  document.getElementById("fechaResumen").textContent = "Fecha: " + fecha;
+  document.getElementById("horaResumen").textContent = "Hora: " + hora;
 
-            // Escuchar cambios en el tipo de consulta para actualizar resumen
-            const radiosConsulta = document.querySelectorAll('input[name="tipoConsulta"]');
-            radiosConsulta.forEach(radio => {
-                radio.addEventListener("change", (e) => {
-                    const valor = e.target.value;
-                    localStorage.setItem("tipoConsulta", valor);
-                    document.getElementById("tipoConsultaResumen").textContent = "Tipo de Consulta: " + valor;
-                });
-            });
+  const tipoConsultaSeleccionado = localStorage.getItem("tipoConsulta") || "--";
+  document.getElementById("tipoConsultaResumen").textContent = "Tipo de Consulta: " + tipoConsultaSeleccionado;
 
-            // Actualizar mensaje resumen al escribir
-            const mensajeInput = document.getElementById("mensaje");
-            const mensajeResumen = document.getElementById("mensajeResumen");
-            mensajeInput.addEventListener("input", () => {
-                mensajeResumen.textContent = mensajeInput.value.trim() || "\u00A0"; // nbsp si vacío
-            });
-        });
+  // Escuchar cambios en tipo de consulta para actualizar resumen y localStorage
+  const radiosConsulta = document.querySelectorAll('input[name="tipoConsulta"]');
+  radiosConsulta.forEach((radio) => {
+    radio.addEventListener("change", (e) => {
+      const valor = e.target.value;
+      localStorage.setItem("tipoConsulta", valor);
+      document.getElementById("tipoConsultaResumen").textContent = "Tipo de Consulta: " + valor;
+    });
+  });
 
+  // Actualizar mensaje resumen al escribir
+  const mensajeInput = document.getElementById("mensaje");
+  const mensajeResumen = document.getElementById("mensajeResumen");
+  mensajeInput.addEventListener("input", () => {
+    mensajeResumen.textContent = mensajeInput.value.trim() || "\u00A0"; // nbsp si vacío
+  });
+});
 
+document.getElementById("formCita").addEventListener("submit", async function (e) {
+  e.preventDefault();
 
-        // Manejar envío del formulario
-        const formCita = document.getElementById("formCita");
+  const form = e.target;
 
-        formCita.addEventListener("submit", function (e) {
-            e.preventDefault();
+  // Validar el formulario usando validación nativa HTML5
+  if (!form.checkValidity()) {
+    form.classList.add('was-validated'); // Para mostrar mensajes de invalid-feedback si usas Bootstrap
+    alert("Por favor completa todos los campos obligatorios correctamente.");
+    return;
+  }
 
+  // Obtener valores del formulario y del localStorage
+  const nombre = document.getElementById("nombre").value.trim();
+  const correo = document.getElementById("email").value.trim();
+  const telefono = document.getElementById("telefono").value.trim();
+  const tipoConsulta = document.querySelector('input[name="tipoConsulta"]:checked')?.value;
+  const tipoDivorcio = document.getElementById("tipoDivorcio").value;
+  const mensaje = document.getElementById("mensaje").value.trim();
 
+  const fecha = localStorage.getItem("fechaSeleccionada");
+  const hora = localStorage.getItem("horaSeleccionada");
 
+  if (!fecha || !hora) {
+    alert("No se ha seleccionado una fecha y hora válidas para la cita.");
+    return;
+  }
 
-        });
+  const datosCita = {
+    nombre,
+    correo,
+    telefono,
+    tipoConsulta,
+    tipoDivorcio,
+    mensaje,
+    fecha,
+    hora,
+  };
 
-        document.getElementById("formCita").addEventListener("submit", function (e) {
+  try {
+    const res = await fetch("http://localhost:5000/api/cita", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(datosCita),
+    });
 
-            e.preventDefault(); // Evita que recargue la página
+    if (res.ok) {
+      // Guarda correo para uso futuro si quieres
+      localStorage.setItem("correoUsuario", correo);
 
-            const correo = document.getElementById("email").value;
+      // Redirige solo si el envío fue exitoso
+      window.location.href = "citaCompleta.html";
+    } else {
+      const errorData = await res.json();
+      alert("Error al enviar la cita: " + (errorData.message || "Error desconocido"));
+    }
+  } catch (error) {
+    console.error(error);
+    alert("Error al enviar la cita, intenta de nuevo más tarde.");
+  }
+});
 
-
-            if (correo.trim() === "") {
-                alert("Por favor ingresa tu correo electrónico.");
-                return;
-            }
-
-            // Guarda el correo en localStorage para usarlo en el paso 4
-            localStorage.setItem("correoUsuario", correo);
-
-            // Redirecciona al paso 4
-            window.location.href = "citaCompleta.html";
-        });
     </script>
 </body>
 
