--- a/horas.html
+++ b/horas.html
@@ -88,7 +88,7 @@
 
 
 
-        <h2 class="text-center mb-4">Paso 2 de 4: Selecciona la Hora</h2>
+        <h3 class="step-indicator text-center text-primary">Paso 2 de 4: Selecciona la Hora</h3>
 
         <div id="fechaSeleccionada" class="text-center mb-4 fs-5 fw-semibold"></div>
 
