--- a/testimonios.html
+++ b/testimonios.html
@@ -114,18 +114,18 @@
         <div class="resumen-puntos">
             <div class="punto">
                 <div>Divorcios Completados <br>
-                    1,275
+                    512
                 </div>
             </div>
             <div class="punto">
-                <div>Clientes Satisfechos</div>
+                <div>Clientes Satisfechos <br>
+                    512</div>
             </div>
             <div class="punto">
-                <div>Días Promedio</div>
+                <div>Días Promedio <br>
+                    15</div>
             </div>
-            <div class="punto">
-                <div>Abogados Expertos</div>
-            </div>
+            
         </div>
 
         <!-- Testimonios -->
