--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
           style="color: #ffffff; border:2px solid #47556E;">Agendar Consulta Gratuita</a>
         <a href="calculadora.html" class="btn btn-outline-light px-4 py-2 fw-semibold"
           style="color: #1E293B; border:2px solid #47556E;">Calcular Costos</a>
+        <a href="citas.html" class="btn btn-light text-primary px-4 py-2 fw-semibold"
+          style="color: #ffffff; border:2px solid #47556E;">Agenda tu Cita</a>
       </div>
       <div class="row justify-content-center text-white mt-4">
         <div class="col-md-3 col-6 mb-3">
@@ -72,7 +74,7 @@
         </div>
         <div class="col-md-3 col-6 mb-3">
           <i class="bi bi-calendar-check fs-2 mb-2 d-block" style="color: #18A44B;"></i>
-          <p class="mb-0" style="color: #47556E;">Proceso en 30 días</p>
+          <p class="mb-0" style="color: #47556E;">Proceso en 15 días</p>
         </div>
         <div class="col-md-3 col-6 mb-3">
           <i class="bi bi-shield-lock fs-2 mb-2 d-block" style="color: #18A44B;"></i>
@@ -231,23 +233,23 @@
           <ul class="list-unstyled">
             <li class="mb-2">
               <i class="bi bi-telephone text-primary me-2"></i>
-              <a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda">+1 (809) 000-0000</a>
+              <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda">+1 (829) 487-7541</a>
             </li>
             <li class="mb-2">
               <i class="bi bi-envelope text-primary me-2"></i>
-              <a href="mailto:r3a1ylegends@gmail.com">tunombre@dominio.com</a>
+              <a href="mailto:contacto@divorcios.do">contacto@divorcios.do</a>
             </li>
             <li class="mb-2">
               <i class="bi bi-geo-alt-fill text-primary me-2"></i>
               Consulta 100% online
             </li>
             <li class="mb-2">
-              <a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda" class="btn btn-outline-success">
+              <a href="https://wa.me/18294877541?text=Hola,%20necesito%20ayuda" target="_blank" rel="noopener noreferrer" class="btn btn-outline-success">
                 <i class="bi bi-whatsapp me-1"></i> Escríbeme
               </a>
             </li>
             <li class="mb-2">
-              <a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda" class="btn btn-outline-primary">
+              <a href="https://www.instagram.com/divorcios.do/#" target="_blank" rel="noopener noreferrer" class="btn btn-outline-primary">
                 <i class="bi bi-instagram me-1"></i> Conoceme
               </a>
             </li>
@@ -332,9 +334,58 @@
     }
   </style>
 
-  <a href="https://wa.me/+18097772103?text=Hola,%20necesito%20ayuda" target="_blank" class="whatsapp-float">
+  <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda" target="_blank" class="whatsapp-float">
     <img src="https://media.tenor.com/ipP4Q7xYznwAAAAj/araslot-whatsapp.gif" alt="Whatsapp" width="50" height="50">
   </a>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const form = document.getElementById("consultaForm");
+
+    form.addEventListener("submit", async function (e) {
+      e.preventDefault();
+
+      // Verificamos campos con HTML5
+      if (!form.checkValidity()) {
+        form.classList.add("was-validated");
+        return;
+      }
+
+      // Recolectamos los datos
+      const datos = {
+        nombre: document.getElementById("nombre").value.trim(),
+        correo: document.getElementById("correo").value.trim(),
+        telefono: document.getElementById("telefono").value.trim(),
+        tipoDivorcio: document.getElementById("tipoDivorcio").value,
+        mensaje: document.getElementById("mensaje").value.trim()
+      };
+
+      try {
+        const res = await fetch("http://localhost:5000/api/consulta", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify(datos)
+        });
+
+        const result = await res.json();
+
+        if (res.ok) {
+          alert("✅ Consulta enviada satisfactoriamente. Te contactaremos pronto.");
+          form.reset();
+          form.classList.remove("was-validated");
+        } else {
+          alert("❌ Hubo un problema: " + result.message);
+        }
+      } catch (error) {
+        console.error(error);
+        alert("❌ Error al enviar el formulario. Intenta de nuevo.");
+      }
+    });
+  });
+</script>
+
 
 </body>
 
