--- a/blog.html
+++ b/blog.html
@@ -158,19 +158,21 @@
       <h2 class="mb-3">¿Necesitas Asesoría Legal Personalizada?</h2>
       <p class="mb-4">Nuestros artículos son informativos, pero cada caso es único. Habla con nuestros abogados
         especializados para obtener consejos específicos para tu situación.</p>
-      <a class="btn btn-primary px-4 me-2" href="#consulta">Consulta Gratuita</a>
+      <a class="btn btn-primary px-4 me-2" href="index.html#consulta">Consulta Gratuita</a>
+
     </div>
 
+
   </section>
-  
+
   <footer class="footer bg-dark text-white pt-5 pb-3">
     <div class="container">
       <div class="row">
 
         <div class="col-md-4 mb-4">
           <h5 class="fw-bold mb-3">Divorcios Online</h5>
-          <p>Especialistas en divorcios rápidos, seguros y completamente en línea. Atención personalizada y
-            asesoría legal confiable.</p>
+          <p>Especialistas en divorcios rápidos, seguros y completamente en línea. Atención personalizada y asesoría
+            legal confiable.</p>
         </div>
 
         <div class="col-md-4 mb-4">
@@ -187,12 +189,13 @@
         <div class="col-md-4 mb-4">
           <h5 class="fw-bold mb-3">Contáctanos</h5>
           <p><i class="bi bi-geo-alt-fill me-2"></i> República Dominicana</p>
-          <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorciosonline.com</p>
-          <p><i class="bi bi-telephone-fill me-2"></i> +1 (809) 123-4567</p>
+          <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorcios.do</p>
+          <p><i class="bi bi-telephone-fill me-2"></i> +1 (829) 487-7541</p>
           <div class="social-icons mt-3">
-            <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.instagram.com/divorcios.do/#" class="text-white me-3"><i
+                class="bi bi-instagram"></i></a>
+            <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda" class="text-white"><i
+                class="bi bi-whatsapp"></i></a>
           </div>
         </div>
 
@@ -200,7 +203,7 @@
 
       <hr class="bg-secondary" />
       <div class="text-center small mt-3">
-        &copy; 2025 Divorcios Online. Todos los derechos reservados.
+        &copy; 2025 Divorcios.do. Todos los derechos reservados.
       </div>
     </div>
   </footer>
