--- a/calculadora.html
+++ b/calculadora.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Costos</title>
-    <link rel="stylesheet" href="assets/css/calculadora.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/calculadora.css">
 
 </head>
 
@@ -49,8 +49,6 @@
 
     <div class="container py-5">
 
-
-
         <div class="row">
             <div class="col-md-7">
                 <form id="formCalculadora">
@@ -60,22 +58,22 @@
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="divorcio" value="30000" id="express">
                             <label class="form-check-label" for="express">
-                                <b>Divorcio de mutuo acuerdo - $499.99 </b>
-                                <p>Ambos cónyuges están de acuerdo en separarse y establecen los términos juntos.</p>
+                                <p><b>Divorcio de mutuo acuerdo - $499.99 </b> <br> Ambos cónyuges están de acuerdo en
+                                    separarse y establecen los términos juntos. </p>
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="divorcio" value="39864" id="mutuo">
                             <label class="form-check-label" for="mutuo">
-                                <b>Divorcio por causa determinada - $659.99 </b>
-                                <p>Uno de los cónyuges demanda al otro por una causa legal.</p>
+                                <p><b>Divorcio por causa determinada - $659.99 </b> <br> Uno de los cónyuges demanda al
+                                    otro por una causa legal. </p>
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="divorcio" value="72480" id="contencioso">
                             <label class="form-check-label" for="contencioso">
-                                <b>Divorcio al vapor - $1199.99 </b>
-                                <p> para extranjeros o dominicanos que residen fuera del país.</p>
+                                <p><b>Divorcio al vapor - $1199.99 </b> <br> Para extranjeros o dominicanos que residen
+                                    fuera del país. </p>
                             </label>
                         </div>
                     </div>
@@ -92,11 +90,11 @@
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="6040" id="bienes">
                             <label class="form-check-label" for="bienes">
-                                <b>¿Tienen bienes compartidos? (+$99.99) </b>
-                                <p>+ 25% del total de los bienes compatidos</p>
+                                <p><b>¿Tienen bienes compartidos? (+$99.99) </b> <br> + 25% del total de los bienes
+                                    compatidos </p>
+
                             </label>
                         </div>
-                        <br>
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="4530" id="mediacion">
                             <label class="form-check-label" for="mediacion">
@@ -110,15 +108,13 @@
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="urgencia" value="0" id="normal">
                             <label class="form-check-label" for="normal">
-                                <b>Tiempo normal</b>
-                                <p>(Sin apuro)</p>
+                                <p><b>Tiempo normal</b> <br> (Sin apuro) </p>
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="urgencia" value="0.25" id="urgente">
                             <label class="form-check-label" for="urgente">
-                                <b>Tramitación urgente</b>
-                                <p>(+25% costo)</p>
+                                <p><b>Tramitación urgente</b> <br> (+25% costo) </p>
                             </label>
                         </div>
                     </div>
@@ -184,12 +180,13 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Contáctanos</h5>
                     <p><i class="bi bi-geo-alt-fill me-2"></i> República Dominicana</p>
-                    <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorciosonline.com</p>
-                    <p><i class="bi bi-telephone-fill me-2"></i> +1 (809) 123-4567</p>
+                    <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorcios.do</p>
+                    <p><i class="bi bi-telephone-fill me-2"></i> +1 (829) 487-7541</p>
                     <div class="social-icons mt-3">
-                        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/divorcios.do/#" class="text-white me-3"><i
+                                class="bi bi-instagram"></i></a>
+                        <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda" class="text-white"><i
+                                class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
 
@@ -197,7 +194,7 @@
 
             <hr class="bg-secondary" />
             <div class="text-center small mt-3">
-                &copy; 2025 Divorcios Online. Todos los derechos reservados.
+                &copy; 2025 Divorcios.do. Todos los derechos reservados.
             </div>
         </div>
     </footer>
