--- a/formulario.html
+++ b/formulario.html
@@ -7,7 +7,7 @@
     <title>Formulario de Contacto - Citas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/formulario.css">
-
+    
 </head>
 
 <body>
@@ -45,6 +45,8 @@
                 abogados especializados en divorcios.</p>
         </div>
     </section>
+
+
 
     <div class="container py-4">
 
@@ -177,12 +179,13 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Contáctanos</h5>
                     <p><i class="bi bi-geo-alt-fill me-2"></i> República Dominicana</p>
-                    <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorciosonline.com</p>
-                    <p><i class="bi bi-telephone-fill me-2"></i> +1 (809) 123-4567</p>
+                    <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorcios.do</p>
+                    <p><i class="bi bi-telephone-fill me-2"></i> +1 (829) 487-7541</p>
                     <div class="social-icons mt-3">
-                        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/divorcios.do/#" class="text-white me-3"><i
+                                class="bi bi-instagram"></i></a>
+                        <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda" class="text-white"><i
+                                class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
 
@@ -190,14 +193,14 @@
 
             <hr class="bg-secondary" />
             <div class="text-center small mt-3">
-                &copy; 2025 Divorcios Online. Todos los derechos reservados.
+                &copy; 2025 Divorcios.do. Todos los derechos reservados.
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/formulario.js"></script>
 
+    <script src="assets/js/formulario.js"></script>
 </body>
 
 </html>
