--- a/horas.html
+++ b/horas.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Selecciona la Hora - Citas</title>
-    <link rel="stylesheet" href="assets/css/horas.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    
+    <link rel="stylesheet" href="assets/css/horas.css">
 
 </head>
+
 <body>
 
     <!-- Navbar -->
@@ -47,7 +47,11 @@
         </div>
     </section>
 
+
+
     <div class="container py-5">
+
+
 
         <h3 class="step-indicator text-center text-primary">Paso 2 de 4: Selecciona la Hora</h3>
 
@@ -82,7 +86,8 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Enlaces Útiles</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros Servicios</a></li>
+                        <li><a href="index.html#servicios" class="text-white text-decoration-none">Nuestros
+                                Servicios</a></li>
                         <li><a href="index.html#proceso" class="text-white text-decoration-none">Proceso</a></li>
                         <li><a href="calculadora.html" class="text-white text-decoration-none">Calculadora</a></li>
                         <li><a href="citas.html" class="text-white text-decoration-none">Citas</a></li>
@@ -93,12 +98,13 @@
                 <div class="col-md-4 mb-4">
                     <h5 class="fw-bold mb-3">Contáctanos</h5>
                     <p><i class="bi bi-geo-alt-fill me-2"></i> República Dominicana</p>
-                    <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorciosonline.com</p>
-                    <p><i class="bi bi-telephone-fill me-2"></i> +1 (809) 123-4567</p>
+                    <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorcios.do</p>
+                    <p><i class="bi bi-telephone-fill me-2"></i> +1 (829) 487-7541</p>
                     <div class="social-icons mt-3">
-                        <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-                        <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-                        <a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
+                        <a href="https://www.instagram.com/divorcios.do/#" class="text-white me-3"><i
+                                class="bi bi-instagram"></i></a>
+                        <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda" class="text-white"><i
+                                class="bi bi-whatsapp"></i></a>
                     </div>
                 </div>
 
@@ -106,13 +112,14 @@
 
             <hr class="bg-secondary" />
             <div class="text-center small mt-3">
-                &copy; 2025 Divorcios Online. Todos los derechos reservados.
+                &copy; 2025 Divorcios.do. Todos los derechos reservados.
             </div>
         </div>
     </footer>
-    
-    <script src="assets/js/horas.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <script src="assets/js/horas.js"></script>
 </body>
+
 </html>
