--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
   <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="assets/css/index.css" />
+  <link rel="stylesheet" href="assets/css/index.css"/>
 
 </head>
 
@@ -233,7 +233,7 @@
             </li>
             <li class="mb-2">
               <i class="bi bi-envelope text-primary me-2"></i>
-              <a href="mailto:contacto@divorcios.do">contacto@divorcios.do</a>
+              <a href="https://mail.google.com/mail/?view=cm&fs=1&to=contacto@divorcios.do" target="_blank"> contacto@divorcios.do</a>
             </li>
             <li class="mb-2">
               <i class="bi bi-geo-alt-fill text-primary me-2"></i>
@@ -299,12 +299,13 @@
         <div class="col-md-4 mb-4">
           <h5 class="fw-bold mb-3">Contáctanos</h5>
           <p><i class="bi bi-geo-alt-fill me-2"></i> República Dominicana</p>
-          <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorciosonline.com</p>
-          <p><i class="bi bi-telephone-fill me-2"></i> +1 (809) 123-4567</p>
+          <p><i class="bi bi-envelope-fill me-2"></i> contacto@divorcios.do</p>
+          <p><i class="bi bi-telephone-fill me-2"></i> +1 (829) 487-7541</p>
           <div class="social-icons mt-3">
-            <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="text-white me-3"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="text-white"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.instagram.com/divorcios.do/#" class="text-white me-3"><i
+                class="bi bi-instagram"></i></a>
+            <a href="https://wa.me/+18294877541?text=Hola,%20necesito%20ayuda" class="text-white"><i
+                class="bi bi-whatsapp"></i></a>
           </div>
         </div>
 
@@ -312,7 +313,7 @@
 
       <hr class="bg-secondary" />
       <div class="text-center small mt-3">
-        &copy; 2025 Divorcios Online. Todos los derechos reservados.
+        &copy; 2025 Divorcios.do. Todos los derechos reservados.
       </div>
     </div>
   </footer>
@@ -321,7 +322,7 @@
     <img src="https://media.tenor.com/ipP4Q7xYznwAAAAj/araslot-whatsapp.gif" alt="Whatsapp" width="50" height="50">
   </a>
 
-  <!-- Scripts Bootstrap y JS personalizado -->
+<!-- Scripts Bootstrap y JS personalizado -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/index.js"></script>
 
